force-app/main/default/objects/Account/fields/GL_Group__c.field-meta.xml
<CustomField>
    <fullName>GL_Group__c</fullName>
    <label>GL Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal Gov</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Local Gov</fullName>
            </value>
            <value>
                <fullName>NP-ASSN-EDU</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>State Gove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>