force-app/main/default/objects/Account/fields/How_are_Invoices_Delivered__c.field-meta.xml
<CustomField>
    <fullName>How_are_Invoices_Delivered__c</fullName>
    <label>How are Invoices Delivered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronically</fullName>
            </value>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>