force-app/main/default/objects/Account/fields/Possible_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Possible_Sales_Rep__c</fullName>
    <label>Possible Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>