force-app/main/default/objects/Account/fields/QuorumId__c.field-meta.xml
<CustomField>
    <fullName>QuorumId__c</fullName>
    <externalId>true</externalId>
    <label>Quorum Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>